<resources>
    <string name="app_name">CheQ</string>
    <string name="total_due_text">Total due</string>
    <string name="total_due_amount">₹60000</string>
    <string name="pay_now">pay now</string>
    <string name="earn_1_cheq_chips">Earn 1% CheQ Chips</string>
    <string name="powered_by">Powered By</string>
    <string name="total_credit_amount">/900</string>
    <string name="credit_score_rating">very good</string>
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="rewards">rewards</string>
    <string name="chips_balance">chips balance</string>
    <string name="your_vouchers">your vouchers</string>
    <string name="get_cash_instantly">Get cash instantly!</string>
    <string name="explore_vouchers">Explore Vouchers</string>
    <string name="action_recommended_title">Never miss a due date with cheq safe</string>
    <string name="action_recommended_desc"><![CDATA[Link your email & get bills]]></string>
    <string name="link_now">Link Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_credit_score">Your Credit Score</string>
    <string name="action_recommended">Action Recommended</string>
</resources>