<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_selector"
        app:labelVisibilityMode="labeled"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:title="@string/pay"
        android:id="@+id/payFragment"
        android:icon="@drawable/card_grey"
        android:orderInCategory="100"
        app:labelVisibilityMode="labeled"
        app:showAsAction="always"/>

    <item android:title="@string/rewards"
        android:id="@+id/rewardFragment"
        android:icon="@drawable/rewards_selector"
        app:labelVisibilityMode="labeled"
        android:orderInCategory="100"
        app:showAsAction="always"/>

</menu>