<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pay_now_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_total_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_due_text"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="23dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/basier_circle_medium"
                    android:textColor="#131414"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:textAllCaps="true"
                    tools:text="@string/total_due_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_due_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_due_amount"
                    android:textSize="24sp"
                    android:fontFamily="@font/basier_circle_bold"
                    android:textColor="#131414"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:textAllCaps="true"
                    tools:text="@string/total_due_amount" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/text_total_due"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/total_due_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pay_now_custom_button"
                    app:layout_constraintTop_toBottomOf="@id/total_due_rv"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/round_corner_green_button">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/pay_now_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:fontFamily="@font/basier_circle_regular"
                        android:textColor="#FFFFFF"
                        android:text="@string/pay_now"
                        app:textAllCaps="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="@string/pay_now" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/earn_chips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/earn_1_cheq_chips"
                        android:textSize="10sp"
                        android:paddingBottom="7dp"
                        android:fontFamily="@font/basier_circle_bold"
                        android:textColor="#FFFFFF"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pay_now_text" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/pay_now_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        app:layout_constraintRight_toLeftOf="@id/earn_chips"
                        app:layout_constraintTop_toBottomOf="@id/pay_now_text"
                        android:src="@drawable/single_chips" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
</layout>