<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/action_recommended_outer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#30D2A2"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/action_recommended_inner_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_recommended_cons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="18dp"
                android:paddingTop="20dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/action_recommended_gradient">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/action_recommended_title"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/basier_circle_bold"
                    android:textSize="18sp"
                    android:text="@string/action_recommended_title"
                    android:textColor="#131414"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:text="Never miss a due date with cheq safe"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/action_recommended_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/basier_circle_regular"
                    android:textSize="12sp"
                    android:textColor="#131414"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/action_recommended_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/action_recommended_desc"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/action_recommended_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/action_recommended_icon"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="11dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:src="@drawable/action_recommended_icon"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background= "@drawable/black_rounded_corner"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/action_recommended_desc"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/link_now"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
    </com.google.android.material.card.MaterialCardView>

</layout>